--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.8
+Django==1.11
 python-http-client==2.2.1
 django-widget-tweaks
 Pillow
@@ -7,3 +7,5 @@ django-sendgrid==1.0.1
 sendgrid==3.6.0
 pytz
 sorl-thumbnail
+
+djangorestframework
